--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -275,4 +275,7 @@ $$\lambda = \frac{\galt{A}}{A} = \frac{\galt{B}}{B}$$
 Substituting into $A^2 + 27B^2 = 4p = \galt{A}^2 + 27\galt{B}^2$ gives $\lambda^2 = 1$, so $\lambda = \pm 1$.
 The assumption that $A = \galt{A} = 1 \mod 3$ means that $\lambda = 1$, proving the uniqueness of $A$ and completing the proof.
 \end{proof}
-% EXAMPLE
+We finish with an example.
+To calculate $M_73$, for example, we need to solve $4\times73 = A^2 + 27B^2$ for some integers $A$ and $B$.
+Observe that $A=7$ and $B=9$ solve this equation, and also $A\equiv 1 \mod 3$ as required.
+Therefore $M_73 = 73 + 7 + 1 = 81$.
