Small changes to finiteelliptic, lenstra and gauss

--- a/LaTeX/finiteelliptic.tex
+++ b/LaTeX/finiteelliptic.tex
@@ -22,9 +22,7 @@ The underlying field $k$ of $\an$ and $\pn$ we now take to be $\fp$ instead of $
 % 
 % plot(xpoints,ypoints,xlab="x",ylab="y")
 % 
-% Instead of taking points on an elliptic curve $E$ in $\pn[2]$ as usual, we simply take curves with coefficients in $\fp$ and solutions in $\fp \times \fp$.
-Therefore we now have $E:y^2 = x^3 + $ , andthe visible part of an elliptic curve $E$ is represented by a collection of points in $\an[2](\fp)$.
-% finish this
+Therefore we still write curves as $E:y^2=f(x)$, except now, by changing the field $k$, we have coefficients of $f(x)$ and points on the curve $(x,y)$ with values in $\fp$, and so the visible part of an elliptic curve $E$ is represented by a collection of points in $\an[2](\fp)$.
 The point at infinity $\pai$ remains on the curve at $[0,1,0]$.
 \Cref{finitecurve} gives a visual example of a curve over a finite field.
 \begin{figure}[htbp]
