--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -276,6 +276,6 @@ Substituting into $A^2 + 27B^2 = 4p = \galt{A}^2 + 27\galt{B}^2$ gives $\lambda^
 The assumption that $A = \galt{A} = 1 \mod 3$ means that $\lambda = 1$, proving the uniqueness of $A$ and completing the proof.
 \end{proof}
 We finish with an example.
-To calculate $M_73$, for example, we need to solve $4\times73 = A^2 + 27B^2$ for some integers $A$ and $B$.
+To calculate $M_{73}$, for example, we need to solve $4\times73 = A^2 + 27B^2$ for some integers $A$ and $B$.
 Observe that $A=7$ and $B=9$ solve this equation, and also $A\equiv 1 \mod 3$ as required.
-Therefore $M_73 = 73 + 7 + 1 = 81$.
+Therefore $M_{73} = 73 + 7 + 1 = 81$.
