Add lenstra paper to bib

--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-04-16 13:08:31 +0100 
+%% Created for Will Bolton at 2016-04-21 13:28:39 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{lenstra1987,
+	Author = {Lenstra Jr, Hendrik W},
+	Date-Added = {2016-04-21 12:27:25 +0000},
+	Date-Modified = {2016-04-21 12:27:33 +0000},
+	Journal = {Annals of mathematics},
+	Pages = {649--673},
+	Publisher = {JSTOR},
+	Title = {Factoring integers with elliptic curves},
+	Year = {1987}}
 
 @book{weil1948,
 	Author = {Weil, André},
