Add brief overview of Schoof's algorithm

--- a/LaTeX/points.tex
+++ b/LaTeX/points.tex
@@ -11,6 +11,8 @@ The most fundamental theoretical result in finding the order of $E(\fp)$ is the 
 The theorem was initially proved for elliptic curves by Helmut Hasse in \cite{hasse1936a}, \cite{hasse1936b} and \cite{hasse1936c}, and subsequently generalised to curves of higher genus by André Weil in \cite{weil1948}, proved by Pierre Deligne in \cite{deligne1974}.
 \input{h-w.tex}
 \subsubsection{Schoof's Algorithm}
-Schoof's algorithm here.
+The Hasse-Weil estimate gives an important bound on the number of rational points over an elliptic curve over a finite field, but otherwise does not give the exact number.
+For this purpose, in 1985, René Schoof published a paper detailing what is known as \emph{Schoof's algorithm} \cite{schoof1985}.
+This was the first algorithm of its kind to run in polynomial time, as opposed to exponential time.
 \subsubsection{Gauss' Theorem}
 \input{gauss.tex}
