Add to lenstra and edit bib

--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-04-21 13:28:39 +0100 
+%% Created for Will Bolton at 2016-04-21 15:41:51 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{pollard1974,
+	Author = {Pollard, John M},
+	Booktitle = {Mathematical Proceedings of the Cambridge Philosophical Society},
+	Date-Added = {2016-04-21 14:27:05 +0000},
+	Date-Modified = {2016-04-21 14:27:34 +0000},
+	Number = {03},
+	Organization = {Cambridge Univ Press},
+	Pages = {521--528},
+	Title = {Theorems on factorization and primality testing},
+	Volume = {76},
+	Year = {1974}}
 
 @article{lenstra1987,
 	Author = {Lenstra Jr, Hendrik W},
@@ -97,18 +109,6 @@
 	Pages = {219--254},
 	Title = {Counting points on elliptic curves over finite fields},
 	Volume = {7},
-	Year = {1995}}
-
-@article{wiles1995,
-	Author = {Wiles, Andrew},
-	Date-Added = {2016-03-18 16:15:15 +0000},
-	Date-Modified = {2016-03-18 16:17:24 +0000},
-	Journal = {Annals of mathematics},
-	Number = {3},
-	Pages = {443--551},
-	Publisher = {JSTOR},
-	Title = {Modular elliptic curves and Fermat's last theorem},
-	Volume = {141},
 	Year = {1995}}
 
 @book{menezes1996,
