--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -27,7 +27,7 @@
 \clearpage
 
 \section{Theory}
-\subsection{Elliptic curves over finite fields}
+\subsection{Rational points of elliptic curves}
 \input{finiteelliptic.tex}
 \subsection{The number of points on an elliptic curve}
 \input{points.tex}
